Updated database file
Pointing to db cloud

--- a/public/editCompanyProfile.html
+++ b/public/editCompanyProfile.html
@@ -28,7 +28,7 @@
     </style>
     <script>
         $(function(){
-            $("#culture").load("cultureSort.html");
+            $("#search").load("cultureSort.html");
         });
         $(function(){
             $("#skills").load("skillSort.html");
