--- a/public/cultureSort.html
+++ b/public/cultureSort.html
@@ -7,39 +7,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 
     <!-- SORT LIST CSS -->
-
+    <link href="http://rubaxa.github.io/Ply/ply.css" rel="stylesheet" type="text/css"/>
+    <link href="http://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet" type="text/css"/>
+    <link href="sortable-master/st/app.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 
 
 
-<!-- SKILLS SORT START -->
-<!-- SKILLS SORT Connected lists -->
+<!-- CULTURE SORT START -->
+<!-- CULTURE SORT Connected lists -->
 <div class="container" style="height: 1500px;">
     <div data-force="100" class="layer block" style="top: 0; width: 20%; border-style:solid;">
         <div class="layer title">Rank your Culture</div>
         <ul id="foo" class="block__list block__list_words">
-            <li>Creative</li>
-            <li>Logical</li>
-            <li>Problem Solver</li>
-            <li>Good Listener</li>
-            <li>Oral Communicator</li>
-            <li>Flexibility in Scheduling</li>
-            <li>People Skills</li>
-            <li>Punctual</li>
-            <li>Accurate</li>
-            <li>Efficient</li>
-            <li>Multi-tasker</li>
-            <li>Analytical</li>
-            <li>Planner</li>
-            <li>Researcher</li>
-            <li>Team Leader</li>
-            <li>Team Member</li>
-            <li>Stamina</li>
-            <li>Like Fast Pace</li>
-            <li>Relationship Builder</li>
-            <li>UX/UI</li>
-            <li>Teacher/Mentor</li>
+            <li data-id="1">Creative</li>
+            <li data-id="2">Logical</li>
+            <li data-id="3">Problem Solver</li>
+            <li data-id="4">Good Listener</li>
+            <li data-id="5">Oral Communicator</li>
+            <li data-id="6">Flexibility in Scheduling</li>
+            <li data-id="7">People Skills</li>
+            <li data-id="8">Punctual</li>
+            <li data-id="9">Accurate</li>
+            <li data-id="10">Efficient</li>
+            <li data-id="11">Multi-tasker</li>
+            <li data-id="12">Analytical</li>
+            <li data-id="13">Planner</li>
+            <li data-id="14">Researcher</li>
+            <li data-id="15">Team Leader</li>
+            <li data-id="16">Team Member</li>
+            <li data-id="17">Stamina</li>
+            <li data-id="18">Like Fast Pace</li>
+            <li data-id="19">Relationship Builder</li>
+            <li data-id="20">UX/UI</li>
+            <li data-id="21">Teacher/Mentor</li>
         </ul>
     </div>
 
@@ -47,9 +49,6 @@
 
 
 </div>
-<link href="http://rubaxa.github.io/Ply/ply.css" rel="stylesheet" type="text/css"/>
-<link href="http://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet" type="text/css"/>
-<link href="sortable-master/st/app.css" rel="stylesheet" type="text/css"/>
 
 <!----- SORTS JS ------>
 <script src="sortable-master/Sortable.js"></script>
@@ -61,7 +60,32 @@
 
 <hr>
 
+<script>
+    var order;
+    var el = document.getElementById('foo');
+    var sortable = new Sortable(el, {
+        group: "name",  // or { name: "...", pull: [true, false, clone], put: [true, false, array] }
+        sort: true,  // sorting inside list
+        disabled: false, // Disables the sortable if set to true.
 
+        // Changed sorting within list
+        onUpdate: function (/**Event*/evt) {
+            var itemEl = evt.item;  // dragged HTMLElement
+
+            console.log(itemEl);
+        },
+
+        // Called by any change to the list (add / update / remove)
+        onSort: function (/**Event*/evt) {
+            order = sortable.toArray();
+            console.log(order[0]);
+        }
+
+    });
+
+
+
+</script>
 
 
 
