Changed to include id values for each list element.

--- a/public/sortable-master/skillSort.html
+++ b/public/sortable-master/skillSort.html
@@ -22,25 +22,25 @@
     <div data-force="100" class="layer block" style="top: 0; width: 37%; border-style:solid;">
         <div class="layer title">Rank Your Skills</div>
         <ul id="foo" class="block__list block__list_words">
-            <li>Project Management</li>
-            <li>Tech Writing</li>
-            <li>Programming Scripts</li>
-            <li>Programming Java</li>
-            <li>Programming C/C++/C# etc</li>
-            <li>Programming Python, Ruby, Web2Py</li>
-            <li>Database</li>
-            <li>UI/UX</li>
-            <li>Algorithms</li>
-            <li>Debugging</li>
-            <li>System Design</li>
-            <li>Business Analysis</li>
-            <li>Web Development</li>
-            <li>Mobile Development</li>
-            <li>OS</li>
-            <li>System Architecture</li>
-            <li>System Integration</li>
-            <li>AI</li>
-            <li>Game Programming</li>
+            <li data-id="1">Project Management</li>
+            <li data-id="2">Tech Writing</li>
+            <li data-id="3">Programming Scripts</li>
+            <li data-id="4">Programming Java</li>
+            <li data-id="5">Programming C/C++/C# etc</li>
+            <li data-id="6">Programming Python, Ruby, Web2Py</li>
+            <li data-id="7">Database</li>
+            <li data-id="8">UI/UX</li>
+            <li data-id="9">Algorithms</li>
+            <li data-id="10">Debugging</li>
+            <li data-id="11">System Design</li>
+            <li data-id="12">Business Analysis</li>
+            <li data-id="13">Web Development</li>
+            <li data-id="14">Mobile Development</li>
+            <li data-id="15">OS</li>
+            <li data-id="16">System Architecture</li>
+            <li data-id="17">System Integration</li>
+            <li data-id="18">AI</li>
+            <li data-id="19">Game Programming</li>
         </ul>
     </div>
 
