--- a/public/EditProfile.html
+++ b/public/EditProfile.html
@@ -133,7 +133,7 @@
                     <div class="form-group">
                         <label class="col-md-3 control-label"></label>
                         <div class="col-md-8">
-                            <input type="button" class="btn btn-primary" onClick="location.href='flat_user_profile_ui.html'"value="Save Changes">
+                            <input type="button" class="btn btn-primary" id="saveChanges" onClick="save()" value="Save Changes">
                             <span></span>
                             <input type="reset" class="btn btn-default" value="Cancel">
                         </div>
@@ -149,7 +149,20 @@
 
 </div>
 
+<script>
+    function save(){
+        var cul = document.getElementById('cul_sort');
+        var skill = document.getElementById('skill_sort');
 
+        var culSort =  new Sortable(cul);
+        var skillSort =  new Sortable(skill);
+
+        var skillArr = skillSort.toArray();
+        var culArr = culSort.toArray();
+
+        location.href='flat_user_profile_ui.html';
+    }
+</script>
 
 <script type='text/javascript' src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
