--- a/public/cultureSort.html
+++ b/public/cultureSort.html
@@ -20,7 +20,7 @@
 <div class="container" style="height: 1500px;">
     <div data-force="100" class="layer block" style="top: 0; width: 20%; border-style:solid;">
         <div class="layer title">Rank your Culture</div>
-        <ul id="foo" class="block__list block__list_words">
+        <ul id="cul_sort" class="block__list block__list_words">
             <li data-id="1">Creative</li>
             <li data-id="2">Logical</li>
             <li data-id="3">Problem Solver</li>
@@ -62,7 +62,7 @@
 
 <script>
     var order;
-    var el = document.getElementById('foo');
+    var el = document.getElementById('cul_sort');
     var sortable = new Sortable(el, {
         group: "name",  // or { name: "...", pull: [true, false, clone], put: [true, false, array] }
         sort: true,  // sorting inside list
@@ -82,6 +82,8 @@
         }
 
     });
+
+
 
 
 
