--- a/public/skillSort.html
+++ b/public/skillSort.html
@@ -21,7 +21,7 @@
 <div class="container" style="height: 1000px;">
     <div data-force="100" class="layer block" style="top: 0; width: 37%; border-style:solid;">
         <div class="layer title">Rank Your Skills</div>
-        <ul id="bar" class="block__list block__list_words">
+        <ul id="skill_sort" class="block__list block__list_words">
             <li data-id="1">Project Management</li>
             <li data-id="2">Tech Writing</li>
             <li data-id="3">Programming Scripts</li>
@@ -43,10 +43,6 @@
             <li data-id="19">Game Programming</li>
         </ul>
     </div>
-
-
-
-
 </div>
 
 <!----- SORTS JS ------>
@@ -62,7 +58,7 @@
 
 <script>
     var order;
-    var el = document.getElementById('bar');
+    var el = document.getElementById('skill_sort');
     var sortable = new Sortable(el, {
         group: "name",  // or { name: "...", pull: [true, false, clone], put: [true, false, array] }
         sort: true,  // sorting inside list
@@ -82,9 +78,6 @@
         }
 
     });
-
-
-
 </script>
 
 
